src/test/ui/issues/20000-29999/issue-24446.rs
fn main() {
    static foo: dyn Fn() -> u32 = || -> u32 {
        //~^ ERROR the size for values of type
        0
    };
}
